parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_declaration program
Rule 2     program -> function_declaration program
Rule 3     program -> main_function program
Rule 4     program -> vacio
Rule 5     class_declaration -> CLASS ID LLAVE_IZQ class_body LLAVE_DER PUNTO_Y_COMA
Rule 6     class_body -> class_member
Rule 7     class_body -> class_body class_member
Rule 8     class_member -> access_specifier COLON class_member
Rule 9     class_member -> assignment_statement class_member
Rule 10    class_member -> function_declaration class_member
Rule 11    class_member -> constructor_declaration class_member
Rule 12    class_member -> destructor_declaration class_member
Rule 13    class_member -> vacio
Rule 14    access_specifier -> PUBLIC
Rule 15    access_specifier -> PRIVATE
Rule 16    access_specifier -> PROTECTED
Rule 17    constructor_declaration -> ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
Rule 18    destructor_declaration -> DEST ID PARENTESIS_IZQ argument_list PARENTESIS_DER PUNTO_Y_COMA
Rule 19    main_function -> INT MAIN PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
Rule 20    function_declaration -> variable ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
Rule 21    function_declaration -> NUMERAL INCLUDE MENOR ID MAYOR
Rule 22    function_declaration -> USING NAMESPACE ID PUNTO_Y_COMA
Rule 23    statement_list -> statement
Rule 24    statement_list -> statement_list statement
Rule 25    statement -> assignment_statement
Rule 26    statement -> expression_statement
Rule 27    statement -> if
Rule 28    statement -> while
Rule 29    statement -> do_while
Rule 30    statement -> for
Rule 31    statement -> return
Rule 32    statement -> function_call PUNTO_Y_COMA
Rule 33    if -> IF PARENTESIS_IZQ expression PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
Rule 34    if -> IF PARENTESIS_IZQ expression PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER ELSE LLAVE_IZQ statement_list LLAVE_DER
Rule 35    while -> WHILE PARENTESIS_IZQ expression PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
Rule 36    do_while -> DO LLAVE_IZQ statement_list LLAVE_DER WHILE PARENTESIS_IZQ expression PARENTESIS_DER PUNTO_Y_COMA
Rule 37    for -> FOR PARENTESIS_IZQ variable ID ASIGNACION expression PUNTO_Y_COMA expression PUNTO_Y_COMA expression PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
Rule 38    return -> RETURN expression PUNTO_Y_COMA
Rule 39    function_call -> ID PARENTESIS_IZQ argument_list PARENTESIS_DER
Rule 40    argument_fun -> NUMERO COMA argument_fun
Rule 41    argument_fun -> ID COMA argument_fun
Rule 42    argument_fun -> vacio
Rule 43    argument_list -> expression
Rule 44    argument_list -> expression COMA argument_list
Rule 45    argument_list -> variable expression
Rule 46    argument_list -> variable expression COMA argument_list
Rule 47    argument_list -> vacio
Rule 48    assignment_statement -> variable ID PUNTO_Y_COMA
Rule 49    assignment_statement -> variable ID ASIGNACION expression PUNTO_Y_COMA
Rule 50    assignment_statement -> variable ID CORCHETE_IZQ expression CORCHETE_DER ASIGNACION LLAVE_IZQ argument_list LLAVE_DER PUNTO_Y_COMA
Rule 51    assignment_statement -> ID ASIGNACION expression PUNTO_Y_COMA
Rule 52    variable -> INT
Rule 53    variable -> FLOAT
Rule 54    variable -> CHAR
Rule 55    variable -> DOUBLE
Rule 56    variable -> BOOLEAN
Rule 57    variable -> LONG
Rule 58    variable -> STRING
Rule 59    variable -> VOID
Rule 60    expression_statement -> expression PUNTO_Y_COMA
Rule 61    expression_statement -> COUT PRINT expression PUNTO_Y_COMA
Rule 62    expression -> expression SUMA expression
Rule 63    expression -> expression RESTA expression
Rule 64    expression -> expression MULTIPLICACION expression
Rule 65    expression -> expression DIVISION expression
Rule 66    expression -> expression MENOR_IGUAL expression
Rule 67    expression -> expression MAYOR_IGUAL expression
Rule 68    expression -> expression IGUAL expression
Rule 69    expression -> expression DISTINTO expression
Rule 70    expression -> expression AND expression
Rule 71    expression -> expression OR expression
Rule 72    expression -> NOT expression
Rule 73    expression -> PARENTESIS_IZQ expression PARENTESIS_DER
Rule 74    expression -> LLAVE_IZQ expression LLAVE_DER
Rule 75    expression -> NUMERO
Rule 76    expression -> CADENA
Rule 77    expression -> expression PRINT expression
Rule 78    expression -> COUT PRINT expression
Rule 79    expression -> expression MENOR expression
Rule 80    expression -> expression MAYOR expression
Rule 81    expression -> expression SUMA SUMA
Rule 82    expression -> ID
Rule 83    vacio -> <empty>

Terminals, with rules where they appear

AND                  : 70
ASIGNACION           : 37 49 50 51
BOOLEAN              : 56
CADENA               : 76
CHAR                 : 54
CLASS                : 5
COLON                : 8
COMA                 : 40 41 44 46
CORCHETE_DER         : 50
CORCHETE_IZQ         : 50
COUT                 : 61 78
DEST                 : 18
DISTINTO             : 69
DIVISION             : 65
DO                   : 36
DOUBLE               : 55
ELSE                 : 34
FLOAT                : 53
FOR                  : 37
ID                   : 5 17 18 20 21 22 37 39 41 48 49 50 51 82
IF                   : 33 34
IGUAL                : 68
INCLUDE              : 21
INT                  : 19 52
LLAVE_DER            : 5 17 19 20 33 34 34 35 36 37 50 74
LLAVE_IZQ            : 5 17 19 20 33 34 34 35 36 37 50 74
LONG                 : 57
MAIN                 : 19
MAYOR                : 21 80
MAYOR_IGUAL          : 67
MENOR                : 21 79
MENOR_IGUAL          : 66
MULTIPLICACION       : 64
NAMESPACE            : 22
NOT                  : 72
NUMERAL              : 21
NUMERO               : 40 75
OR                   : 71
PARENTESIS_DER       : 17 18 19 20 33 34 35 36 37 39 73
PARENTESIS_IZQ       : 17 18 19 20 33 34 35 36 37 39 73
PRINT                : 61 77 78
PRIVATE              : 15
PROTECTED            : 16
PUBLIC               : 14
PUNTO_Y_COMA         : 5 18 22 32 36 37 37 38 48 49 50 51 60 61
RESTA                : 63
RETURN               : 38
STRING               : 58
SUMA                 : 62 81 81
USING                : 22
VOID                 : 59
WHILE                : 35 36
error                : 

Nonterminals, with rules where they appear

access_specifier     : 8
argument_fun         : 40 41
argument_list        : 17 18 20 39 44 46 50
assignment_statement : 9 25
class_body           : 5 7
class_declaration    : 1
class_member         : 6 7 8 9 10 11 12
constructor_declaration : 11
destructor_declaration : 12
do_while             : 29
expression           : 33 34 35 36 37 37 37 38 43 44 45 46 49 50 51 60 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 73 74 77 77 78 79 79 80 80 81
expression_statement : 26
for                  : 30
function_call        : 32
function_declaration : 2 10
if                   : 27
main_function        : 3
program              : 1 2 3 0
return               : 31
statement            : 23 24
statement_list       : 17 19 20 24 33 34 34 35 36 37
vacio                : 4 13 42 47
variable             : 20 37 45 46 48 49 50
while                : 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_declaration program
    (2) program -> . function_declaration program
    (3) program -> . main_function program
    (4) program -> . vacio
    (5) class_declaration -> . CLASS ID LLAVE_IZQ class_body LLAVE_DER PUNTO_Y_COMA
    (20) function_declaration -> . variable ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
    (21) function_declaration -> . NUMERAL INCLUDE MENOR ID MAYOR
    (22) function_declaration -> . USING NAMESPACE ID PUNTO_Y_COMA
    (19) main_function -> . INT MAIN PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
    (83) vacio -> .
    (52) variable -> . INT
    (53) variable -> . FLOAT
    (54) variable -> . CHAR
    (55) variable -> . DOUBLE
    (56) variable -> . BOOLEAN
    (57) variable -> . LONG
    (58) variable -> . STRING
    (59) variable -> . VOID

    CLASS           shift and go to state 6
    NUMERAL         shift and go to state 8
    USING           shift and go to state 9
    INT             shift and go to state 10
    $end            reduce using rule 83 (vacio -> .)
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    DOUBLE          shift and go to state 13
    BOOLEAN         shift and go to state 14
    LONG            shift and go to state 15
    STRING          shift and go to state 16
    VOID            shift and go to state 17

    program                        shift and go to state 1
    class_declaration              shift and go to state 2
    function_declaration           shift and go to state 3
    main_function                  shift and go to state 4
    vacio                          shift and go to state 5
    variable                       shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> class_declaration . program
    (1) program -> . class_declaration program
    (2) program -> . function_declaration program
    (3) program -> . main_function program
    (4) program -> . vacio
    (5) class_declaration -> . CLASS ID LLAVE_IZQ class_body LLAVE_DER PUNTO_Y_COMA
    (20) function_declaration -> . variable ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
    (21) function_declaration -> . NUMERAL INCLUDE MENOR ID MAYOR
    (22) function_declaration -> . USING NAMESPACE ID PUNTO_Y_COMA
    (19) main_function -> . INT MAIN PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
    (83) vacio -> .
    (52) variable -> . INT
    (53) variable -> . FLOAT
    (54) variable -> . CHAR
    (55) variable -> . DOUBLE
    (56) variable -> . BOOLEAN
    (57) variable -> . LONG
    (58) variable -> . STRING
    (59) variable -> . VOID

    CLASS           shift and go to state 6
    NUMERAL         shift and go to state 8
    USING           shift and go to state 9
    INT             shift and go to state 10
    $end            reduce using rule 83 (vacio -> .)
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    DOUBLE          shift and go to state 13
    BOOLEAN         shift and go to state 14
    LONG            shift and go to state 15
    STRING          shift and go to state 16
    VOID            shift and go to state 17

    class_declaration              shift and go to state 2
    program                        shift and go to state 18
    function_declaration           shift and go to state 3
    main_function                  shift and go to state 4
    vacio                          shift and go to state 5
    variable                       shift and go to state 7

state 3

    (2) program -> function_declaration . program
    (1) program -> . class_declaration program
    (2) program -> . function_declaration program
    (3) program -> . main_function program
    (4) program -> . vacio
    (5) class_declaration -> . CLASS ID LLAVE_IZQ class_body LLAVE_DER PUNTO_Y_COMA
    (20) function_declaration -> . variable ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
    (21) function_declaration -> . NUMERAL INCLUDE MENOR ID MAYOR
    (22) function_declaration -> . USING NAMESPACE ID PUNTO_Y_COMA
    (19) main_function -> . INT MAIN PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
    (83) vacio -> .
    (52) variable -> . INT
    (53) variable -> . FLOAT
    (54) variable -> . CHAR
    (55) variable -> . DOUBLE
    (56) variable -> . BOOLEAN
    (57) variable -> . LONG
    (58) variable -> . STRING
    (59) variable -> . VOID

    CLASS           shift and go to state 6
    NUMERAL         shift and go to state 8
    USING           shift and go to state 9
    INT             shift and go to state 10
    $end            reduce using rule 83 (vacio -> .)
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    DOUBLE          shift and go to state 13
    BOOLEAN         shift and go to state 14
    LONG            shift and go to state 15
    STRING          shift and go to state 16
    VOID            shift and go to state 17

    function_declaration           shift and go to state 3
    program                        shift and go to state 19
    class_declaration              shift and go to state 2
    main_function                  shift and go to state 4
    vacio                          shift and go to state 5
    variable                       shift and go to state 7

state 4

    (3) program -> main_function . program
    (1) program -> . class_declaration program
    (2) program -> . function_declaration program
    (3) program -> . main_function program
    (4) program -> . vacio
    (5) class_declaration -> . CLASS ID LLAVE_IZQ class_body LLAVE_DER PUNTO_Y_COMA
    (20) function_declaration -> . variable ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
    (21) function_declaration -> . NUMERAL INCLUDE MENOR ID MAYOR
    (22) function_declaration -> . USING NAMESPACE ID PUNTO_Y_COMA
    (19) main_function -> . INT MAIN PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
    (83) vacio -> .
    (52) variable -> . INT
    (53) variable -> . FLOAT
    (54) variable -> . CHAR
    (55) variable -> . DOUBLE
    (56) variable -> . BOOLEAN
    (57) variable -> . LONG
    (58) variable -> . STRING
    (59) variable -> . VOID

    CLASS           shift and go to state 6
    NUMERAL         shift and go to state 8
    USING           shift and go to state 9
    INT             shift and go to state 10
    $end            reduce using rule 83 (vacio -> .)
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    DOUBLE          shift and go to state 13
    BOOLEAN         shift and go to state 14
    LONG            shift and go to state 15
    STRING          shift and go to state 16
    VOID            shift and go to state 17

    main_function                  shift and go to state 4
    program                        shift and go to state 20
    class_declaration              shift and go to state 2
    function_declaration           shift and go to state 3
    vacio                          shift and go to state 5
    variable                       shift and go to state 7

state 5

    (4) program -> vacio .

    $end            reduce using rule 4 (program -> vacio .)


state 6

    (5) class_declaration -> CLASS . ID LLAVE_IZQ class_body LLAVE_DER PUNTO_Y_COMA

    ID              shift and go to state 21


state 7

    (20) function_declaration -> variable . ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER

    ID              shift and go to state 22


state 8

    (21) function_declaration -> NUMERAL . INCLUDE MENOR ID MAYOR

    INCLUDE         shift and go to state 23


state 9

    (22) function_declaration -> USING . NAMESPACE ID PUNTO_Y_COMA

    NAMESPACE       shift and go to state 24


state 10

    (19) main_function -> INT . MAIN PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
    (52) variable -> INT .

    MAIN            shift and go to state 25
    ID              reduce using rule 52 (variable -> INT .)


state 11

    (53) variable -> FLOAT .

    ID              reduce using rule 53 (variable -> FLOAT .)
    NOT             reduce using rule 53 (variable -> FLOAT .)
    PARENTESIS_IZQ  reduce using rule 53 (variable -> FLOAT .)
    LLAVE_IZQ       reduce using rule 53 (variable -> FLOAT .)
    NUMERO          reduce using rule 53 (variable -> FLOAT .)
    CADENA          reduce using rule 53 (variable -> FLOAT .)
    COUT            reduce using rule 53 (variable -> FLOAT .)


state 12

    (54) variable -> CHAR .

    ID              reduce using rule 54 (variable -> CHAR .)
    NOT             reduce using rule 54 (variable -> CHAR .)
    PARENTESIS_IZQ  reduce using rule 54 (variable -> CHAR .)
    LLAVE_IZQ       reduce using rule 54 (variable -> CHAR .)
    NUMERO          reduce using rule 54 (variable -> CHAR .)
    CADENA          reduce using rule 54 (variable -> CHAR .)
    COUT            reduce using rule 54 (variable -> CHAR .)


state 13

    (55) variable -> DOUBLE .

    ID              reduce using rule 55 (variable -> DOUBLE .)
    NOT             reduce using rule 55 (variable -> DOUBLE .)
    PARENTESIS_IZQ  reduce using rule 55 (variable -> DOUBLE .)
    LLAVE_IZQ       reduce using rule 55 (variable -> DOUBLE .)
    NUMERO          reduce using rule 55 (variable -> DOUBLE .)
    CADENA          reduce using rule 55 (variable -> DOUBLE .)
    COUT            reduce using rule 55 (variable -> DOUBLE .)


state 14

    (56) variable -> BOOLEAN .

    ID              reduce using rule 56 (variable -> BOOLEAN .)
    NOT             reduce using rule 56 (variable -> BOOLEAN .)
    PARENTESIS_IZQ  reduce using rule 56 (variable -> BOOLEAN .)
    LLAVE_IZQ       reduce using rule 56 (variable -> BOOLEAN .)
    NUMERO          reduce using rule 56 (variable -> BOOLEAN .)
    CADENA          reduce using rule 56 (variable -> BOOLEAN .)
    COUT            reduce using rule 56 (variable -> BOOLEAN .)


state 15

    (57) variable -> LONG .

    ID              reduce using rule 57 (variable -> LONG .)
    NOT             reduce using rule 57 (variable -> LONG .)
    PARENTESIS_IZQ  reduce using rule 57 (variable -> LONG .)
    LLAVE_IZQ       reduce using rule 57 (variable -> LONG .)
    NUMERO          reduce using rule 57 (variable -> LONG .)
    CADENA          reduce using rule 57 (variable -> LONG .)
    COUT            reduce using rule 57 (variable -> LONG .)


state 16

    (58) variable -> STRING .

    ID              reduce using rule 58 (variable -> STRING .)
    NOT             reduce using rule 58 (variable -> STRING .)
    PARENTESIS_IZQ  reduce using rule 58 (variable -> STRING .)
    LLAVE_IZQ       reduce using rule 58 (variable -> STRING .)
    NUMERO          reduce using rule 58 (variable -> STRING .)
    CADENA          reduce using rule 58 (variable -> STRING .)
    COUT            reduce using rule 58 (variable -> STRING .)


state 17

    (59) variable -> VOID .

    ID              reduce using rule 59 (variable -> VOID .)
    NOT             reduce using rule 59 (variable -> VOID .)
    PARENTESIS_IZQ  reduce using rule 59 (variable -> VOID .)
    LLAVE_IZQ       reduce using rule 59 (variable -> VOID .)
    NUMERO          reduce using rule 59 (variable -> VOID .)
    CADENA          reduce using rule 59 (variable -> VOID .)
    COUT            reduce using rule 59 (variable -> VOID .)


state 18

    (1) program -> class_declaration program .

    $end            reduce using rule 1 (program -> class_declaration program .)


state 19

    (2) program -> function_declaration program .

    $end            reduce using rule 2 (program -> function_declaration program .)


state 20

    (3) program -> main_function program .

